# CC

./: .gitignore  .gitmodules  AbbreviationsOfTypes.hpp  CMakeLists.txt  CompilerDriver.cpp  CompilerDriver.hpp  Program.cpp  Program.h  Program.hpp  README.md  ShortTypes.hpp  main.cpp
CodeGen/: AbstractTree.cpp  AbstractTree.hpp  ConcreteTree.cpp  ConcreteTree.hpp
Codegen/: AbstractTree.hpp  Assembly.cpp  Assembly.hpp  AstToAssembly.cpp  AstToAssembly.hpp
Lexing/: Lexeme.cpp  Lexeme.hpp  Lexer.cpp  Lexer.h  Lexer.hpp  Token.cpp  Token.h  Token.hpp
Parser/: Expression.cpp  Expression.hpp  ExpressionNode.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  FunctionNode.cpp  FunctionNode.hpp  Parser.cpp  Parser.hpp  Program.cpp  Program.hpp  ProgramNode.cpp  ProgramNode.hpp  Statement.cpp  Statement.hpp  StatementNode.cpp  StatementNode.hpp
Parsing/: AbstractTree.cpp  AbstractTree.hpp  AstVisualizer.cpp  AstVisualizer.hpp  ConcreteTree.cpp  ConcreteTree.hpp  Parser.cpp  Parser.hpp
Tacky/: AbstractTree.cpp  AbstractTree.hpp  ConcreteTree.cpp  ConcreteTree.hpp
examples/: example_1.c  example_2.c  example_3.c  hello_name.c  hello_world  hello_world.c  hello_world.c.i  hello_world.s
src/: CMakeLists.txt  CompilerDriver.cpp  CompilerDriver.hpp  DynCast.hpp  ErrorCodes.hpp  ShortTypes.hpp  StateCode.hpp  main.cpp
src/CodeGen/: AbstractTree.hpp  AsmAST.cpp  AsmAST.hpp  AsmPrinter.cpp  AsmPrinter.hpp  Assembly.cpp  Assembly.hpp  CMakeLists.txt  CodeGenDriver.cpp  CodeGenDriver.hpp  ConcreteTree.cpp  ConcreteTree.hpp  FixUpInstructions.cpp  FixUpInstructions.hpp  GenerateAsmTree.cpp  GenerateAsmTree.hpp  Operators.hpp  PseudoRegisterReplacer.cpp  PseudoRegisterReplacer.hpp
src/Frontend/: CMakeLists.txt  Error.hpp  FrontendDriver.cpp  FrontendDriver.hpp  SymbolTable.cpp  SymbolTable.hpp  VarTable.cpp  VarTable.hpp
src/Frontend/AST/: ASTBase.cpp  ASTBase.hpp  ASTDeepCopy.cpp  ASTDeepCopy.hpp  ASTExpr.cpp  ASTExpr.hpp  ASTFwd.hpp  ASTInitializer.cpp  ASTInitializer.hpp  ASTParser.cpp  ASTParser.hpp  ASTPrinter.cpp  ASTPrinter.hpp  ASTTypes.cpp  ASTTypes.hpp  ASTUtils.cpp  ASTUtils.hpp  ASTVisitor.cpp  ASTVisitor.hpp  AstTypes.cpp  AstTypes.hpp  CMakeLists.txt  FuncEntry.hpp
src/Frontend/IR/: AstToIrOperators.cpp  AstToIrOperators.hpp  CMakeLists.txt  ExprResult.cpp  ExprResult.hpp  GenerateIr.cpp  GenerateIr.hpp
src/Frontend/Lexing/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenStore.cpp  TokenStore.hpp
src/Frontend/Parsing/: ASTFwd.cpp  ASTParser.hpp  AstTraverser.cpp  CMakeLists.txt  Declarator.cpp  Declarator.hpp  Operators.cpp  Operators.hpp  Parser.cpp  Parser.hpp
src/Frontend/Semantics/: CMakeLists.txt  DeSugar.cpp  DeSugar.hpp  DeSugarCompoundAssign.cpp  DeSugarCompoundAssign.hpp  DeSugarDeref.cpp  DeSugarDeref.hpp  DeSugarSimple.cpp  DeSugarSimple.hpp  GotoLabelsUnique.cpp  GotoLabelsUnique.hpp  InitArray.cpp  InitArray.hpp  InitArrays.cpp  InitArrays.hpp  InitCompound.cpp  InitCompound.hpp  Labeling.cpp  Labeling.hpp  LabelsUnique.cpp  LabelsUnique.hpp  LoopLabeling.cpp  LoopLabeling.hpp  LvalueVerification.cpp  LvalueVerification.hpp  RemoveRedundantDecls.cpp  RemoveRedundantDecls.hpp  ScopeStack.cpp  ScopeStack.hpp  Switch.cpp  Switch.hpp  TypeCheckAndConvert.cpp  TypeCheckAndConvert.hpp  TypeResolution.cpp  TypeResolution.hpp  TypeResolutionExpr.cpp  TypeResolutionExpr.hpp  Utils.cpp  Utils.hpp  ValidateReturn.cpp  (+7 more)
src/Frontend/Traverser/: ASTPrinter.cpp  ASTPrinter.hpp  ASTTraverser.cpp  ASTTraverser.hpp  CMakeLists.txt  ConstASTTraverser.cpp  ConstASTTraverser.hpp
src/IR/: ASTIr.cpp  ASTIr.hpp  AbstractTree.cpp  AbstractTree.hpp  CMakeLists.txt  ConcreteTree.cpp  ConcreteTree.hpp  GenerateIr.cpp  GenerateIr.hpp  IrAST.cpp  IrAST.hpp  IrPrinter.cpp  IrPrinter.hpp  Printer.cpp  Printer.hpp
src/Lexing/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
src/Parsing/: ASTFwd.hpp  ASTPrinter.cpp  ASTPrinter.hpp  ASTVisitor.hpp  AbstractTree.cpp  AbstractTree.hpp  AstPrinter.cpp  AstPrinter.hpp  AstTraverser.hpp  AstVisualizer.cpp  AstVisualizer.hpp  ConcreteTree.cpp  ConcreteTree.hpp  ConstAstTraverser.cpp  ConstAstTraverser.hpp  Parser.cpp  Parser.hpp  ParserAST.cpp  ParserAST.hpp  ParserFactory.cpp  ParserFactory.hpp  ValidateReturn.cpp  ValidateReturn.hpp  VariableResolution.cpp  VariableResolution.hpp
src/Semantics/: LvalueVerification.cpp  LvalueVerification.hpp  ValidateReturn.cpp  ValidateReturn.hpp  VariableResolution.hpp
src/Types/: CMakeLists.txt  Type.hpp  TypeConversion.cpp  TypeConversion.hpp
test/: Assembly.cpp  CMakeLists.txt  CodeGenInstructionFactory.cpp  CodeGenInstructionFactory.hpp  CodeGenOperatorsTest.cpp  Codegen.cpp  Codegen.hpp  FixUpInstructions.cpp  FixUpInstructionsTest.cpp  FixUpInstructionsTest.hpp  GenerateIr.cpp  GenerateIr.hpp  Lexer.cpp  Lexer.hpp  ManuelTesting.cpp  ManuelTesting.h  Parser.cpp  Parser.hpp  ParserExpr.cpp  ParserOperators.cpp  ParserStmt.cpp  TestReadUtils.cpp  TestReadUtils.hpp  Token.cpp  TypeConversion.cpp  main_test.cpp
